doc: Updated test post

--- a/posts/test-post.mdx
+++ b/posts/test-post.mdx
@@ -1,8 +1,9 @@
 ---
-title: A test post
+title: Test post
 description: Lorem ipsum. A simple description to not blow you away
 slug: test-post
 section: Getting Started
+position: 1
 ---
 
 ## A test post
