--- a/posts/test-post.mdx
+++ b/posts/test-post.mdx
@@ -1,7 +1,7 @@
 ---
 title: Test post
 description: Lorem ipsum. A simple description to not blow you away
-slug: test-post
+slug: /docs/test-post
 section: Getting Started
 position: 1
 ---
