--- a/posts/test-post.mdx
+++ b/posts/test-post.mdx
@@ -2,8 +2,8 @@
 title: Test post
 description: Lorem ipsum. A simple description to not blow you away
 slug: /docs/test-post
-section: Getting Started
-position: 1
+section: Introduction
+position: 2
 ---
 
 ## A test post
