--- a/posts/pwa/test-post.mdx
+++ b/posts/pwa/test-post.mdx
@@ -1,7 +1,7 @@
 ---
 title: Test post
 description: Lorem ipsum. A simple description to not blow you away
-slug: /docs/test-post
+slug: /pwa/test-post
 section: Introduction
 position: 2
 ---
