--- a/posts/sw/intro.mdx
+++ b/posts/sw/intro.mdx
@@ -1,6 +1,6 @@
 ---
 title: Introduction
-description: Possimus saepe veritatis sint nobis et quam eos. Architecto consequatur odit perferendis fuga eveniet possimus rerum cumque. Ea deleniti voluptatum deserunt voluptatibus ut non iste.
+description: Getting started with `@remix-pwa/sw` package for building, extending and customizing Service Worker in Remix.
 slug: /sw/introduction
 section: Introduction
 position: 1
