--- a/posts/sw/use-sw-effect.mdx
+++ b/posts/sw/use-sw-effect.mdx
@@ -1,7 +1,7 @@
 ---
-title: useSWEEffect()
+title: useSWEffect()
 description: A hook to monitor and handle navigation events in your Remix application.
-slug: /sw/use-swe-effect
+slug: /sw/use-sw-effect
 section: Hooks
 position: 1
 ---
