--- a/posts/pwa/installation.mdx
+++ b/posts/pwa/installation.mdx
@@ -1,12 +1,12 @@
 ---
-title: Test post
-description: Lorem ipsum. A simple description to not blow you away
-slug: /pwa/test-post
+title: Installation
+description: Install Remix PWA and get started building your next PWA.
+slug: /pwa/installation
 section: Introduction
 position: 2
 ---
 
-## A test post
+## Installation
 
 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla vitae elit libero, a pharetra augue. Nullam quis risus eget urna mollis ornare vel eu leo. Nullam id dolor id nibh ultricies vehicula ut id elit. Donec ullamcorper nulla non metus auctor fringilla. Nullam id dolor id nibh ultricies vehicula ut id elit. Donec ullamcorper nulla non metus auctor fringilla. Nullam id dolor id nibh ultricies vehicula ut id elit. Donec ullamcorper nulla non metus auctor fringilla.
 
