new docs - updated

--- a/posts/pwa/intro.mdx
+++ b/posts/pwa/intro.mdx
@@ -6,9 +6,6 @@ section: Introduction
 position: 1
 ---
 
-import Warn from "./warn.tsx";
-import Info from "./info.tsx";
-
 ## Overview
 
 Remix PWA is a lightweight, standalone npm package that adds full Progressive Web App support to Remix 💿.
@@ -33,3 +30,7 @@ To get additional info about installation and the CLI, check out the [installati
 - **Extensibility**: Remix PWA is built to be extensible, so you can add your own custom caching strategies, native APIs and more. 
 - **Modular**: The new `remix-pwa` isn't bundled together no more. It is now built from modular packages that together would give you the best PWA experience you can get.
 - **Plugins**: *Pssst*, that's right. Remix PWA extensibility just hit the next level 🔥. We are saying no more, as you would soon see! 
+
+## License
+
+Remix PWA is licensed under the [MIT License](https://github.com/remix-pwa/remix-pwa/blob/main/LICENSE.md).
