doc: Extra docs changes!

--- a/posts/pwa/intro.mdx
+++ b/posts/pwa/intro.mdx
@@ -25,11 +25,11 @@ To get additional info about installation and the CLI, check out the [installati
 - **One-stop for everything PWA**: Integrate Progressive Web App (PWA) features into Remix including offline support, caching, installability on native devices and more.
 - **Speed up your builds by caching large resources**: Automatic caching for `build` files and static files, it's customisable and on the house!
 - **Take caching to the next level**: Now ships with multiple caching strategies to customise your user experience down to the last word. Don't like what we have? Oh, you can build yours too!
-- **Error handling is a nice-to-have**: Safely handles uncached loader calls without affecting other sections of the site (i.e Throws user to nearest Error boundary without disrupting Service Workers)
+- **Error handling is a nice-to-have**: Safely handles uncached loader calls without affecting other sections of the site (e.g throws user to nearest Error boundary without disrupting application)
 - **Native to the moon 🚀**: Native APIs to help give your Remix web application the native feel it deserves.
 - **Extensibility**: Remix PWA is built to be extensible, so you can add your own custom caching strategies, native APIs and more. 
 - **Modular**: The new `remix-pwa` isn't bundled together no more. It is now built from modular packages that together would give you the best PWA experience you can get.
-- **Plugins**: *Pssst*, that's right. Remix PWA extensibility just hit the next level 🔥. We are saying no more, as you would soon see! 
+- **Plugins**: *Pssst*, that's right. Remix PWA extensibility just hit next level 🔥. We are saying no more, as you would soon see! 
 
 ## License
 
