--- a/posts/pwa/community.mdx
+++ b/posts/pwa/community.mdx
@@ -29,7 +29,7 @@ If you have a question that you think might be useful to others, or you want to 
 
 ### Definitely not Twitter
 
-Headiing is enough...
+Heading is enough...
 
 ## Contributing
 
