found where navigate went to /introduction, got rid of it since /sw or /client etc should grab intro

--- a/posts/sw/intro.mdx
+++ b/posts/sw/intro.mdx
@@ -1,7 +1,7 @@
 ---
 title: Introduction
 description: Getting started with `@remix-pwa/sw` package for building, extending and customizing Service Worker in Remix.
-slug: /sw/introduction
+slug: /sw
 section: Introduction
 position: 1
 ---
