--- a/posts/pwa/faq.mdx
+++ b/posts/pwa/faq.mdx
@@ -1,7 +1,39 @@
 ---
 title: FAQs
-description: Popular questions (and answers!) I've gotten so far about Remix PWA.
+description: Popular questions (and answers!) I've gotten so far about Remix PWA plus some.
 slug: /pwa/faq
 section: Introduction
 position: 6
 ---
+
+## Frequently Asked Questions 
+
+### What is Remix PWA?
+
+Remix PWA 
+
+### What is Remix?
+
+Remix 
+
+### What is a Progressive Web App (PWA)?
+
+A Progressive Web App (PWA) is a web application that uses modern web capabilities to deliver an app-like experience to users. These apps meet certain requirements (see below), are deployed to servers, accessible through URLs, and indexed by search engines.
+
+### What does `remix-pwa` do to my application? 
+
+`remix-pwa`
+
+### What are the different modules for? 
+
+...
+
+## Extending Remix PWA 
+
+### How do plugins work?
+
+...
+
+### Can I create my own plugin? 
+
+...
