--- a/posts/pwa/contribute.mdx
+++ b/posts/pwa/contribute.mdx
@@ -12,7 +12,7 @@ We welcome contributions to Remix PWA! We can't be where we are or accomplish wh
 
 This post is to help you familiarize yourself with the process and start contributing to Remix PWA.
 
-**Please read this before attempting to make a contribution.**
+**Please read this before attempting to make a contribution to any package.**
 
 ## Roles
 
