chore: Finished basic `pwa` posts

--- a/posts/pwa/remix-pwa-client.mdx
+++ b/posts/pwa/remix-pwa-client.mdx
@@ -1,9 +1,9 @@
 ---
 title: '@remix-pwa/client'
-description: This guide will get you all set up and ready to use `remix-pwa` in your Remix application.
+description: Everything utils and APIs to give your PWA superpowers and the authentic feeling!
 slug: /pwa/remix-pwa-client
 section: Packages
-position: 4
+position: 3
 ---
 
-## Overview
+<p className="lead">Coming Soon 🚜</p>
