--- a/posts/pwa/remix-pwa-push.mdx
+++ b/posts/pwa/remix-pwa-push.mdx
@@ -1,9 +1,9 @@
 ---
 title: '@remix-pwa/push'
-description: This guide will get you all set up and ready to use `remix-pwa` in your Remix application.
+description: 'Push notifications for your PWA (rolling out soon)'
 slug: /pwa/remix-pwa-push
 section: Packages
-position: 3
+position: 2
 ---
 
-## Overview
+<p className="lead">Coming Soon 🚜</p>
