--- a/posts/pwa/intro.mdx
+++ b/posts/pwa/intro.mdx
@@ -1,6 +1,6 @@
 ---
 title: Introduction
-description: A lightweight, standalone npm package that adds full Progressive Web App support to Remix 💿. Let's dive right in!
+description: "A lightweight, standalone npm package that adds full Progressive Web App support to Remix 💿. Let's dive right in!"
 slug: /
 section: Introduction
 position: 1
