--- a/posts/sw/plugins.mdx
+++ b/posts/sw/plugins.mdx
@@ -1,17 +1,34 @@
 ---
 title: Explore Plugins
-description: Learn how to install and setup a basic Service Worker in Remix
+description: "Check out all the new fuzzy and fiery plugins available for Remix PWA 🔥"
 slug: /sw/plugins
 section: Plugins
 position: 1
 ---
 
+Thanks to the design of the `sw` package, Remix PWA is very modular and allows you to extend the functionality of the Service Worker and also `@remix-pwa/sw` itself with plugins.
+This page lists all plugins available (that we are aware of and approved of)
+
+## @remix-pwa/sw plugins
+
+These are a list of plugins that are available for `@remix-pwa/sw` developed by both the Remix PWA team and you!
+
+### Official Plugins 
+
 ...
 
-## Official Plugins 
+### Community Plugins
 
 ...
 
-## Community Plugins
+## @remix-pwa/sw + Workbox plugins 
+
+Plugins used to extend the functionality of `@remix-pwa/sw` with [Workbox](https://developers.google.com/web/tools/workbox) developed by both the Remix PWA team and the community
+
+### Official Plugins
+
+...
+
+### Community Plugins
 
 ...
