--- a/posts/sw/create-plugin.mdx
+++ b/posts/sw/create-plugin.mdx
@@ -25,7 +25,7 @@ export class MyStrategyPlugin extends StrategyPlugin {
 
 ## Plugging a Plugin
 
-To plug a plugin functionality in, you only need to pass it to during instantiation.
+To plug a plugin functionality in, you only need to pass it to during instantiation and that's all.
 
 ```ts
 import { NetworkFirst } from '@remix-pwa/sw';
